force-app/main/default/objects/DNBConnect__DNB_FamilyTreeData__c/fields/DNBConnect__FamilyTreeJobId__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__FamilyTreeJobId__c</fullName>
    <description>Family Tree Job Id</description>
    <label>FamilyTreeJobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>