force-app/main/default/objects/DNBConnect__DNB_FamilyTreeData__c/fields/DNBConnect__FamilyTreeJobStatus__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__FamilyTreeJobStatus__c</fullName>
    <description>Family Tree Job Status</description>
    <label>FamilyTreeJobStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>