force-app/main/default/objects/DNBConnect__DNB_FamilyTreeData__c/fields/DNBConnect__Job_Type__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__Job_Type__c</fullName>
    <description>Family Tree Job Type</description>
    <label>Job_Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>